# Panaverse_q3

./: README.md
lec_01/learn_fastapi/learn_fastapi/: index.py  main.py  pyproject.toml
lec_01/learn_fastapi/learn_fastapi/config/: db.py
lec_01/learn_fastapi/learn_fastapi/routes/: note.py
lec_01/learn_fastapi/learn_fastapi/schemas/: note.py
lec_01/learn_fastapi/learn_fastapi/static/: style.css
lec_01/learn_fastapi/learn_fastapi/template/: index.html
lec_01/learn_fastapi/learn_fastapi/templates/: index.html
lec_01/my_project/: pyproject.toml
lec_01/my_project/my_project/: HowToRun.md  main.py
lec_02/fastapi_helloworld/: pyproject.toml
lec_02/fastapi_helloworld/fastapi_helloworld/: main.py  understandMain.py
lec_02/hello_poetry/hello_poetry/: pyproject.toml
lec_02/hello_poetry/hello_poetry/hello_poetry/: new.ts  python_review.ipynb
lec_02/python_basics/: main.ipynb
lec_03/todo/: pyproject.toml
lec_03/todo/todo/: .env.swp  .main.py.swo  .main.py.swp  main.py  settings.py
lec_06/14_docker/03_dev_containers/app/: main.py
lec_06/hello_world/: pyproject.toml
lec_06/lec_06i/: Dockerfile  pyproject.toml
lec_06/lec_06i/lec_06i/: main.py
