[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["Umer-Islam <139012668+Umer-Islam@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
