[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["Umer-Islam <139012668+Umer-Islam@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlmodel = "^0.0.16"
psycopg = {extras = ["binary"], version = "^3.1.18"}
psycopg2 = {extras = ["binary"], version = "^2.9.9"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
