[tool.poetry]
name = "learn-fastapi"
version = "0.1.0"
description = ""
authors = ["Umer-Islam <139012668+Umer-Islam@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.28.0"
fastapi = "^0.110.0"
pymongo = "^4.6.2"
jinja2 = "^3.1.3"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
